--- a/src/assets/styles/02-generic/common.scss
+++ b/src/assets/styles/02-generic/common.scss
@@ -1,7 +1,8 @@
 html {
   scroll-behavior: smooth;
-}
+  scrollbar-gutter: stable;
 
+} 
 // using salla.document.onClick(...), become effective when all children are none pointer events.
 .cursor-pointer * {
   pointer-events: none;
